fixed responsiveness on mobile

--- a/style.css
+++ b/style.css
@@ -5,6 +5,9 @@
   --color: #A849F0;
   --bgcontain: #FFF;
   --bg: #CCC;
+  --fontsize: 1rem;
+  --radius: 1rem;
+  --spacing: 1rem;
 }
 
 @media (prefers-color-scheme: dark) {
@@ -20,21 +23,19 @@
 
 * {
     box-sizing: border-box;
-    font-size: 16px;
+    transition: 0.1s;
 }
 
 h1 {
-    font-size: 32px;
-    align-self: center;
+    font-size: calc(var(--fontsize) * 2.5);
     text-align: center;
 }
 
 body { 
     font-family: sans-serif; 
-    margin: 16px; 
+    margin: var(--spacing); 
     background-color: var(--bg); 
     color: var(--text);
-    font-weight: bold;
 }
 
 .innerbody {
@@ -43,13 +44,13 @@ body {
 }
 
 .button {
-    width: calc(100% - 16px);
+    width: calc(100% - var(--spacing));
     background-color: var(--accent);
     display: inline-block;
-    padding: 12px 16px;
-    font-size: 16px;
+    padding: var(--spacing);
+    font-size: var(--fontsize);
     cursor: pointer;
-    border-radius: 8px;
+    border-radius: calc(var(--radius) / 2);
     background-color: var(--accent);
     color: var(--text);
     border: none;
@@ -60,32 +61,32 @@ body {
 }
 
 .container {
-    width: calc(100% - 32px);
+    width: calc(100% - 2em);
     background-color: var(--bgcontain);
-    padding: 16px;
-    margin: 16px 16px;
-    border-radius: 16px;
+    padding: var(--spacing);
+    margin: var(--spacing);
+    border-radius: var(--radius);
 }
   .container > * {
-    margin: 8px;
+    margin: calc(var(--spacing)/2); 
   }
 
 code {
     background-color: var(--bg);
     font-weight: bold;
-    padding: 4px;
-    border-radius: 4px;
+    padding: calc(var(--spacing)/4);
+    border-radius: calc(var(--radius) / 4);
 }
 
 input[type="checkbox"] {
-    margin-right: 16px;
+    margin-right: var(--spacing);
     appearance: none;
     -webkit-appearance: none;
-    width: 32px;
-    height: 32px;
+    width: calc(var(--fontsize) * 2);
+    height: calc(var(--fontsize) * 2);
     background-color: var(--bg);
     border: 2px solid var(--bg);
-    border-radius: 8px;
+    border-radius: calc(var(--radius)/2);
     cursor: pointer;
     position: relative;
     vertical-align: middle;
@@ -113,11 +114,11 @@ input[type="checkbox"] {
     display: inline-flex;
     align-items: center;
     justify-content: center;
-    font-size: 24px;
-    height: 24px;
-    width: 24px;
+    font-size: calc(var(--fontsize) * 1.5);
+    height: calc(var(--fontsize) * 1.5);
+    width: calc(var(--fontsize) * 1.5);
     border: 2px solid var(--bg);
-    border-radius: 4px;
+    border-radius: calc(var(--radius)/4);
     background-color: var(--bgcontain);
     color: transparent; /* Hide icon by default */
     transition: 0.2s;
@@ -134,30 +135,30 @@ input[type="range"] {
     appearance: none;
     -webkit-appearance: none;
     outline: none;
-    height: 8px;
+    height: calc(var(--fontsize)/2);
     background: var(--bg);
     width: 80%;
     max-width: 65%;
-    border-radius: 8px;
+    border-radius: calc(var(--radius)/2);
     cursor: pointer;
     position: relative;
-    top: 12px;
+    top: calc(var(--fontsize)/1.5);
     }
 input[type="range"]::-webkit-slider-thumb {
     -webkit-appearance: none;
     appearance: none;
-    width: 24px;
-    height: 24px;
+    width: calc(var(--fontsize) * 1.5);
+    height: calc(var(--fontsize) * 1.5);
     background: var(--color);
-    border-radius: 16px;
+    border-radius: var(--radius);
     cursor: pointer;
     transition: 0.1s;
 }
 input[type="range"]::-moz-range-thumb {
-    width: 24px;
-    height: 24px;
+    width: calc(var(--fontsize)*1.5);
+    height: calc(var(--fontsize)*1.5);
     background: var(--color);
-    border-radius: 16px;
+    border-radius: var(--radius);
     cursor: pointer;
     transition: 0.1s;
 }
@@ -172,59 +173,60 @@ input[type="range"]::-moz-range-thumb {
 }
 .slider > * {
     white-space: nowrap;
-    margin: 8px;
+    margin: calc(var(--spacing)/2);
 }
 
 .category {
     box-sizing: border-box;
-    padding: 16px;
-    margin: 8px;
-    border-radius: 8px;
+    padding: var(--spacing);
+    margin: calc(var(--spacing)/2);
+    border-radius: calc(var(--radius)/2);
     border: 2px solid var(--bg);
 }
 
 .buttonSmall{
     background-color: var(--accent);
     display: inline-block;
-    padding: 4px 12px;
-    font-size: 12px;
+    padding: calc(var(--fontsize)/4) calc(var(--fontsize));
+    font-size: calc(var(--fontsize)/1.5);
     cursor: pointer;
-    border-radius: 8px;
+    border-radius: calc(var(--radius)/2);
     color: var(--text);
     border: none;
     font-weight: bold;
     text-align: center;
     transition: 0.1s;
     box-sizing: border-box;
-        height: 32px;
+        height: calc(var(--fontsize)*2);
     text-align: center;
     align-content: center;
 }
 .row{
     margin: 0;
-    padding: 4px;
+    padding: calc(var(--spacing)/4);
     display: flex;
     justify-content: space-between;
 }
 
 .hidden {
     display: none;
+    transition: 0.1s;
 }
 
 .remove {
     background: var(--bg);
     color: var(--text);
-    min-width: 32px;
-    height: 32px;
+    min-width: calc(var(--fontsize) * 2);
+    height: calc(var(--fontsize) * 2);
     text-align: center;
     align-content: center;
-    border-radius: 4px;
+    border-radius: calc(var(--radius)/4);
     user-select: none;
     cursor: pointer;
 }
 
 .cd {
-    min-width: 32px;
+    min-width: calc(var(--fontsize) * 2);
     text-align: center;
     align-content: center;
 }
@@ -234,7 +236,7 @@ input[type="range"]::-moz-range-thumb {
 }
 
 .spaced > * {
-    margin: 8px;
+    margin: calc(var(--spacing)/2);
 }
 
 span, .material-symbols-rounded {
@@ -243,25 +245,15 @@ span, .material-symbols-rounded {
     'wght' 600,
     'GRAD' 0,
     'opsz' 24;
-    font-size: 16px;
+    font-size:var(--fontsize);
     vertical-align: top;
-}
-
-.msrs {
-    font-size: 12px;
-    
-}
-
-.msrup {
-    vertical-align: -6px;
-    margin-right: 16px;
+    padding-left: calc(var(--spacing)/2);
 }
 
 .inline {
-    margin-left: 16px;
-    padding: 4px 8px 4px 8px;
+    margin-left: var(--spacing);
+    padding: calc(var(--spacing)/2);
     display: inline-block;
-    
 }
 
 #output .row {
